examples/test/testpolicy19315.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19315
  namespace: namespace329
spec:
  podSelector:
    matchLabels:
      key10: value46
      key40: value32
      key6: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value22
      podSelector:
        matchLabels:
          key9: value0
          key27: value15
